# polychrome

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  pyproject.toml  users.db
api/app/: api.py  auth.py  config.py  html.py  login_tracker.py  main.py  vouch_tracker.py
api/app/models/: commentfile.py  file.py  menu.py  poll.py  user.py  vouch.py
api/app/repositories/: commentfile.py  menu.py  poll.py  user.py
api/templates/: home.html  login.html  logout.html
api/tests/: conftest.py  test_api.py  test_cli_app.py  test_login_logout.py  test_menu_repository.py  test_poll_repository.py
cli/: __init__.py  __main__.py  api.py  app.py
cli/css/: main.tcss
cli/screens/: __init__.py  commentfile_screen.py  login_screen.py  menu_screen.py
cli/tests/: dummy_api.py  test_cli_app.py  test_login.py  test_menu.py  test_menu_screen.py
cli/tests/__snapshots__/test_login/: test_login.raw  test_login_screen_snapshot.raw
cli/tests/__snapshots__/test_menu/: test_menu_snapshot.raw
cli/tests/data/menus/: index.json
cli/widgets/: greeting.py
data/commentfiles/: 2.json
docs/: flow.excalidraw  screens.md
